// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Button danger to matcg snapshot 1`] = `
<button
  className="button -danger"
  onClick={[Function]}
>
  Click me danger
</button>
`;

exports[`Should Button default to matcg snapshot 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  Click me
</button>
`;

exports[`Should Button success to matcg snapshot 1`] = `
<button
  className="button -success"
  onClick={[Function]}
>
  Click me success
</button>
`;
